# Walkie-Talkie-Shared

./: Shared_library.txt
WalkieTalkie/: CMakeLists.txt
WalkieTalkie/Client/: CMakeLists.txt  ClientMain.cpp
WalkieTalkie/Server/: CMakeLists.txt  ServerMain.cpp
